kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lunatic-siem
  labels:
    app.kubernetes.io/part-of: lunatic-siem
